[gd_scene load_steps=4 format=3 uid="uid://bgp2ky1lb7adc"]

[ext_resource type="Script" path="res://scripts/base_inv_ui.gd" id="1_x374f"]
[ext_resource type="Texture2D" uid="uid://cvvs1pvjjvcr2" path="res://assets/sprites/ui/inventory_background.png" id="2_26tko"]
[ext_resource type="Script" path="res://scripts/DragTexture.gd" id="3_eih06"]

[node name="InventoryUI" type="Control"]
custom_minimum_size = Vector2(88, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -32.0
offset_right = 44.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x374f")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -32.0
offset_right = 44.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26tko")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -28.0
offset_right = 38.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="DragTexture" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.997336, 0.988857)
script = ExtResource("3_eih06")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
